--- a/src/web/html/final_page.html
+++ b/src/web/html/final_page.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Jumbotron example · Bootstrap v5.1</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script type="text/javascript" src="/eel.js"></script>
+    <script type="text/javascript" src="../js/final_page.js"></script>
   </head>
   <body>  
     <main>
