--- a/src/web/html/index.html
+++ b/src/web/html/index.html
@@ -6,17 +6,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <meta name="theme-color" content="#7952b3">
     <link href="../css/start_page.css" rel="stylesheet">
+    <script type="text/javascript" src="../eel.js"></script>
+    <script src="../js/start_page.js"></script>
   </head>
   <body class="text-center">
   <main class="form-signin">
-    <form>
       <h1 class="h1 mb-3 fw-normal">Find your game</h1>
       <div class="form-floating">
         <input type="text" class="form-control" id="gameInput" placeholder="World of Warcraft">
         <label for="gameInput">Game title(e.g. Diablo)</label>
       </div>
-      <button class="w-100 btn btn-lg btn-primary" onclick="search()" type="submit">Search</button>
-    </form>
+      <button class="w-100 btn btn-lg btn-primary" onclick="search()">Search</button>
   </main>
   </body>
 </html>
