--- a/src/web/html/result_page.html
+++ b/src/web/html/result_page.html
@@ -19,13 +19,11 @@
     </head>
     <body class="text-center">
         <main class="form-signin">
-            <form>
-                <div class="form-floating">
-                    <input type="text" class="form-control" id="gameInput" placeholder="World of Warcraft">
-                    <label for="gameInput">Game title</label>
-                </div>
-                <button class="w-100 btn btn-lg btn-primary" type="submit" onclick="search()">Search</button>
-            </form>
+            <div class="form-floating">
+                <input type="text" class="form-control" id="gameInput" placeholder="World of Warcraft">
+                <label for="gameInput">Game title</label>
+            </div>
+            <button class="w-100 btn btn-lg btn-primary" onclick="search()">Search</button>
             <div class="mt-5 clickable">
                 <div class="row g-0 border rounded overflow-hidden flex-md-row shadow-sm position-relative">
                     <div class="col">
