--- a/src/web/html/final_page.html
+++ b/src/web/html/final_page.html
@@ -12,7 +12,7 @@
     <main>
       <div class="container py-5 px-5">
         <header class="pb-3 mb-4 border-bottom text-center h1">
-          <p>It works</p>
+          <p id="doesGameWork">It works</p>
         </header>
         <div class="row">
             <div class="col-md-4">
