Add back method

--- a/src/web/html/final_page.html
+++ b/src/web/html/final_page.html
@@ -8,8 +8,12 @@
     <script type="text/javascript" src="/eel.js"></script>
     <script type="text/javascript" src="../js/final_page.js"></script>
   </head>
-  <body>  
+  <body>
+    
     <main>
+      <button type="button" class="btn btn-default" onclick="go_back()">
+        <strong class="d-inline-block mb-2 text-primary h3">GO BACK</strong>
+      </button>  
       <div class="container py-5 px-5">
         <header class="pb-3 mb-4 border-bottom text-center h1">
           <p id="doesGameWork">It works</p>
