Add loading to start page

--- a/src/web/html/index.html
+++ b/src/web/html/index.html
@@ -17,6 +17,12 @@
         <label for="gameInput">Game title(e.g. Diablo)</label>
       </div>
       <button class="w-100 btn btn-lg btn-primary" onclick="search()">Search</button>
+      <svg class="spinner" id="spinner" width="65px" height="65px" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
+        <circle class="path" fill="none" stroke-width="6" stroke-linecap="round" cx="33" cy="33" r="30"></circle>
+      </svg>
   </main>
   </body>
+  <script>
+    document.getElementById('spinner').style = 'display:none';
+  </script>
 </html>
