--- a/src/web/html/final_page.html
+++ b/src/web/html/final_page.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Jumbotron example · Bootstrap v5.1</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/final_page.css">
     <script type="text/javascript" src="/eel.js"></script>
     <script type="text/javascript" src="../js/final_page.js"></script>
   </head>
@@ -12,11 +13,11 @@
     
     <main>
       <button type="button" class="btn btn-default" onclick="go_back()">
-        <strong class="d-inline-block mb-2 text-primary h3">GO BACK</strong>
+        <strong class="d-inline-block mb-2 text-primary h3">←</strong>
       </button>  
       <div class="container py-5 px-5">
         <header class="pb-3 mb-4 border-bottom text-center h1">
-          <p id="doesGameWork">It works</p>
+          <p id="doesGameWork">Comparison failed</p>
         </header>
         <div class="row">
             <div class="col-md-4">
@@ -27,7 +28,19 @@
                     <div class="row h-60 p-5 d-flex flex-column">
                         <strong class="d-inline-block mb-2 text-primary" id="gameGenre">Genre</strong>
                         <h3 class="mb-0" id="gameTitle">Game title</h3>
-                        <div class="mb-1 text-muted" id="gameYear">Year</div>
+                        <div class="mb-2 text-muted" id="gameYear">Year</div>
+                        <div class="d-flex flex-column">
+                            <strong>Legend:</strong>
+                            <div class="m-0 d-flex">
+                                <span class="dot green"></span><p>&nbsp;runs</p>
+                            </div>
+                            <div class="m-0 d-flex">
+                                <span class="dot red"></span><p>&nbsp;doesn't run</p>
+                            </div>
+                            <div class="m-0 d-flex">
+                                <span class="dot orange"></span><p>&nbsp;failed</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
